29-Jul-2014 Removed FileUtilities package. This has been superseded by the Publisher package.

29-Jul-2014 Removed obsolete test packages, BundlingTest, CopyTest1, and Symlinks. These have all been replaced with Publishing.

25-Jul-2014 Removed Opus.Core.Dependency.GetModuleBuildDirectory() and GetTargettedModuleBuildDirectory(). Use the *Location() replacements instead.

22-Jul-2014 Large refactor of the internal dependency generation engine. Added Locations as a file/directory/symlink abstraction. Introduced Publisher-dev package to handle making a runnable bundle.

09-Jul-2014 Added the exported (to the module build and all dependencies) preprocessor symbol D_<PACKAGENAME>_<MODULENAME>_STATICAPI for all static library modules, to indicate the API linkage required. This can be used, in conjunction with D_OPUS_DYNAMICLIBRARY_BUILD to define API visibility macros.

08-Jul-2014 Renamed the #define OPUS_DYNAMICLIBRARY to D_OPUS_DYNAMICLIBRARY_BUILD to be more consistent with other preprocessor macros. This is defined only in a dynamic library module build.

07-Jul-2014 Added VisualCCommon.ICCompilerOptions.ForcedInclude compiler option, to preprocess specified header files automatically.

07-Apr-2014 Package definition files can now contain an Opus:PackageRoots element, providing additional package search paths. Removed -packageroots command line argument. Added -addpackageroots and -removepackageroots command line arguments.

02-Apr-2014 Exporting TMP and TEMP environment variables with the VisualC tools, to avoid generation of _CL_<hexdigits> temporary files in the current directory.

09-Mar-2014 Speculative fix for bad dependency graph generation, when dependents increase rank, but don't need to maintain the same "delta" between themselves and their dependees because other dependees have not moved.

06-Mar-2014 Added DxErr.lib to the Direct3D9 libraries to link against.
