@@ -1,3 +1,5 @@
+30-Jul-2014 Added Opus.Core.IIsGeneratedSource to identify modules that generate source to be compiled.
+
 29-Jul-2014 Removed FileUtilities package. This has been superseded by the Publisher package.
 
 29-Jul-2014 Removed obsolete test packages, BundlingTest, CopyTest1, and Symlinks. These have all been replaced with Publishing.
